--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-CLIENT_ID='BoxAppClientID'
-CLIENT_SECRET='BoxAppClientSecret'
+CLIENT_ID='jmz7icwke1vjik6zowb3u8e17jxxn05z'
+CLIENT_SECRET='j34H89MlXEmRUsVBqiOs4qW6b2lPXeX5'
 SESSION_SECRET='SessionSecretKey'
