--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A sample code app featuring Box node.js SDK and OAuth 2.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
     "box-node-sdk": "^2.8.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "hbs": "^4.2.0"
+    "hbs": "^4.2.0",
+    "nodemon": "^3.1.3"
   }
 }
